# pytamaro

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytamaro_js_ffi.pyi
.github/workflows/: lint.yml  test.yml  typecheck.yml
docs/: API.rst  Install.rst  JupyterExamples.rst  conf.py  document.xml  examples-pytamaro.json  index.rst  judicious.xslt  judicious_transformer.py  structure.xml
docs/English/: colors.rst  index.rst  io.rst  operations.rst  points.rst  primitives.rst
docs/French/: colors.rst  index.rst  io.rst  operations.rst  points.rst  primitives.rst
docs/German/: colors.rst  index.rst  io.rst  operations.rst  points.rst  primitives.rst
docs/Italian/: colors.rst  index.rst  io.rst  operations.rst  points.rst  primitives.rst
pytamaro/: __init__.py  checks.py  color.py  color_functions.py  color_names.py  debug.py  graphic.py  graphic_tree_canvas.py  graphic_utils.py  io.py  localization.py  operations.py  point.py  point_names.py  primitives.py  utils.py  visitor.py
pytamaro/_ext/json_builder/: __init__.py  builder.py  translator.py  writer.py
pytamaro/_ext/json_builder/ast/: class_def.py  enachedString.py  function.py  image.py  module.py  type.py  variable.py
pytamaro/_ext/sphinx_markdown_builder/: translator.py
pytamaro/de/: __init__.py  color.py  color_names.py  graphic.py  io.py  operations.py  point.py  point_names.py  primitives.py
pytamaro/fr/: __init__.py  color.py  color_names.py  graphic.py  io.py  operations.py  point.py  point_names.py  primitives.py
pytamaro/impl/: __init__.py  shared_io.py
pytamaro/impl/ffi/: io.py  operations.py  primitives.py  specs.py
pytamaro/impl/skia/: checks.py  color.py  debug.py  graphic.py  io.py  operations.py  primitives.py
pytamaro/it/: __init__.py  color.py  color_names.py  graphic.py  io.py  operations.py  point.py  point_names.py  primitives.py
pytamaro/json/: __init__.py  pytamaro_jsontypedef.json  serializer.py  types.py  visitor.py
tests/: test_algebra.py  test_color.py  test_exported_names.py  test_graphic.py  test_io.py  test_json.py  test_localization.py  test_operations.py  test_point.py  test_points.py  test_primitives.py  test_visitor.py  testing_utils.py
tests/de/: test_color.py  test_exported_names.py  test_io.py  test_operations.py  test_point.py  test_primitives.py
tests/fr/: test_color.py  test_exported_names.py  test_io.py  test_operations.py  test_point.py  test_primitives.py
tests/it/: test_color.py  test_exported_names.py  test_io.py  test_operations.py  test_point.py  test_primitives.py
