[project]
name = "pytamaro"
version = "1.1.0"
description = "Educational library for Python to teach programming using graphics"
authors = [
  {name = "Luca Chiodini", email = "luca@chiodini.org"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=11.0.0",
    "skia-python>=132.0b11",
]

[dependency-groups]
dev = [
    "pycodestyle>=2.12.1",
    "pylint>=3.3.1",
    "pyright>=1.1.389",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-toolbox>=3.8.1",
    "sphinx>=8.1.3",
]

[tool.pyright]
include = ["pytamaro", "tests"]

[tool.pytest.ini_options]
python_functions = "test_*"

[tool.pylint.main]
extension-pkg-allow-list = "skia"
ignore-long-lines = "^.*https?://\\S+$"
