[project]
name = "pytamaro"
version = "1.1.4"
description = "Educational library for Python to teach programming using graphics"
authors = [
  {name = "Luca Chiodini", email = "luca@chiodini.org"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow==11.3.0",
    "skia-python==v144.0.post2; sys_platform != 'emscripten'"
]
license-files = []

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "ruff>=0.15.8",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-toolbox==3.8.1",
    "sphinx==8.1.3",
]

[tool.pyright]
include = ["pytamaro", "tests"]

[tool.pytest.ini_options]
python_functions = "test_*"

[tool.ruff.lint]
select = [
    # pydocstyle
    "D",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pylint
    "PL",
]
ignore = [
  "D203",  # keep D211
  "D213",  # keep D212
  "D401",  # We're okay with non-imperative verbs
  "D205"   # Some of our docstrings need more than one line for the summary
]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]